[Venus & Ray] Fixed Supporting Content text alignment

--- a/source/stylesheets/supporting_content.scss
+++ b/source/stylesheets/supporting_content.scss
@@ -39,10 +39,7 @@
   }
 
   .button-title {
-    //background-color: $LIGHT-GRAY;
     position: relative;
-    top: 50%;
-    transform: translateY(-50%);
     font-size: .9em;
   }
 
